Make fb select searchable and fix spacing

--- a/frontend/src/components/WorksheetSettingsDropdown.module.css
+++ b/frontend/src/components/WorksheetSettingsDropdown.module.css
@@ -1,5 +1,5 @@
 .collapse_container {
-  max-height: 92px !important;
+  max-height: 97px !important;
   width: 200px;
   position: absolute;
   right: 10px;
